--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1 style="text-align: center;">Tasks on (13/10/2023)</h1>
-    <a href="text.html">Task on text properties</a>
-    <a href="font.html">Task on font properties</a>
-    <a href="cal1.html">Calender task-1</a>
-    <a href="cal2.html">Calender task-2</a>
+    <h2><a href="text.html">Task on text properties</a></h2><br>
+     <h2><a href="font.html">Task on font properties</a></h2><br>
+     <h2><a href="cal1.html">Calender task-1</a></h2><br>
+    <h2> <a href="cal2.html">Calender task-2</a></h2><br>
     
 </body>
 </html>
